    - marked barreling machine mods as incompatible. Pelagos adds it's own barreling machine and don't lock away ability to use regular barrels with assemblers.
    - fix: regular assembling machine 3 no longer can use titanium barrels, it was added by accident. Ability to use titanium barrels should be locked only to diesel assembler and barreling machine
  Balancing:
    - changed heavy-gun-turret health (800 -> 1200)
    - changed max hand size to make sure crane inserters can handle modded items (250->500)
---------------------------------------------------------------------------------------------------
Version: 0.19.4
Date: 2025-10-26
  Changes:
    - alt mode icons above diesel inserters are now visible
    - added support for gleba_cultured_soil
    - fix: error when trying to place wooden platform if storage was corrupted. Code should now check if wooden platform blacklist exist before placing attempt to prevent crash (create list it if does not exist)
    - you should be now able to place heavy-gun-turret on wooden platform 
---------------------------------------------------------------------------------------------------
Version: 0.19.3
Date: 2025-10-26
  Changes:
    - pelagos terrain generation settings that can't be tweaked are now hidden
    - fix: dmg research now works with heavy gun turret as well (just like it works with regular one)
---------------------------------------------------------------------------------------------------
Version: 0.19.2
Date: 2025-10-25
  Changes:
    - fix: pirate ship enter boat code is now overridden to not cause issues with player location. You can now enter pirateship the same way you enter cargo ship ships
---------------------------------------------------------------------------------------------------
Version: 0.19.1
Date: 2025-10-25
  Changes:
    - fix: composite entities should built properly on space stations