@@ -64,7 +64,7 @@ data:extend({
 		wait_for_full_hand = true,
 		enter_drop_mode_if_held_stack_spoiled = true,
 		max_belt_stack_size = 4,
-		stack_size_bonus = 500 - 1,
+		stack_size_bonus = 250 - 1,
 		minable = { mining_time = 0.1, result = "crane-stack-diesel-inserter" },
 		max_health = 160,
 		corpse = "stack-inserter-remnants",
